# R2C2

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  config.yaml.tpl
.github/workflows/: client_release.yml  release.yml
client/: app.go  auth.go  go.mod  main.go  wails.json
client/frontend/: index.html  package-lock.json  package.json  package.json.md5
client/frontend/src/: App.jsx  App.tsx  globals.css  index.css  style.css
client/frontend/src/components/: AIChatbot.tsx  Clients.tsx  CommandInterface.tsx  Divider.tsx  FileExplorer.tsx  GoldenLayout.tsx  Logs.tsx  Loot.tsx  MenuBar.tsx  MultiPanelInterface.tsx  NetworkMap.tsx  Session.tsx  (+4 more)
client/networking/: download.go  request.go  websocket.go
docs/01-Installation/: Client.md  Manual.md  Quickstart.md  Teamserver.md
docs/02-Client/: Create-listener.md  Login.md
docs/assets/: create-listener.mov
implant/: CMakeLists.txt  Cargo.toml  build.rs  implant.c
implant/.cargo/: config.toml
implant/src/: beacon.rs  commands.rs  lib.rs  main.rs  tasks.rs  transport.rs
implant/src/commands/: execution.rs  file_system.rs  mod.rs  screenshot.rs  system.rs
implant/src/transport/: http.rs  mod.rs  tcp.rs
implant/transport/: transport.h
implant_c/: implant.c
implant_c/transport/: http.c
server/: go.mod  go.sum
server/cmd/: main.go
server/cmd/cli/: root.go
server/internal/api/: hub.go  middleware.go  router.go  server.go  websocket_client.go
server/internal/config/: api.go  config.go  db.go  operator.go
server/internal/database/: listeners.go  operators.go  sessions.go  tasks.go
(+78 files in other folders)
