[package]
name = "implant"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["http"] 
http = []

[profile.release]
opt-level = "z"
lto = "fat"
strip = "symbols"
debug = 0
split-debuginfo = "off"
