[package]
name = "implant"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
whoami = "2.0.2"
local-ip-address = "0.6"
rand = "0.8"
sysinfo = "0.37.2"
screenshots = "0.8.10"
base64 = "0.22.1"
image = "0.24.6"

[features]
default = ["http"] 
http = []

[profile.release]
opt-level = "z"
lto = "fat"
strip = "symbols"
debug = 0
split-debuginfo = "off"
